config banner and delete, edit review

--- a/angular/styles/home.scss
+++ b/angular/styles/home.scss
@@ -73,6 +73,13 @@
   width: 100%;
 }
 
+.right.carousel-control,
+.left.carousel-control {
+  opacity: 0;
+  filter: alpha(opacity=0);
+  /* IE support */
+}
+
 
 /* Footer */
 
