--- a/angular/styles/global.scss
+++ b/angular/styles/global.scss
@@ -93,3 +93,24 @@
     width: 70%;
   }
 }
+
+#comment-form {
+  fieldset {
+    border: none;
+  }
+}
+
+// loader spinner
+.loader {
+    border: 5px solid #f3f3f3; /* Light grey */
+    border-top: 5px solid #4c4145; /* Blue */
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
