--- a/angular/views/main.html
+++ b/angular/views/main.html
@@ -15,7 +15,7 @@
         <li ng-if="user.role" class="dropdown" ng-class="{'open': isActive}" ng-click="activeButton()">
           <a href class="dropdown-toggle" data-toggle="dropdown">{{user.username | uppercase}} <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href ng-click="$state.go('index.home.manage')">MANAGE MOVIES</a></li>
+            <li ng-if="user.role === 32"><a href ng-click="$state.go('index.home.manage')">MANAGE MOVIES</a></li>
             <!-- <li><a href>ACCOUNT INFO</a></li> -->
             <li><a href ng-click="logOut()">LOGOUT</a></li>
             <!-- <li><a href="single-project.html">SINGLE PROJECT</a></li> -->
