--- a/angular/views/home.html
+++ b/angular/views/home.html
@@ -19,7 +19,7 @@
   <div class="movie-best">
     <div class="col-sm-10 col-sm-offset-1 movie-best__rating">Month's Best</div>
     <div class="col-sm-12 change--col">
-      <div ng-repeat="movie in movies" class="movie-beta__item ">
+      <div ng-repeat="movie in movies | orderBy:'rating' : true | limitTo: 6" class="movie-beta__item ">
         <div ng-style="{'background': 'url(' + movie.poster +') no-repeat center center', 'background-size': 'cover', 'height': '247px'}"></div>
         <span class="best-rate">{{movie.rating}}</span>
         <ul class="movie-beta__info">
@@ -56,7 +56,7 @@
   <div class="col-sm-12">
     <div class="row">
       <div ng-repeat="rows in chunkedMovies" ng-class-odd="'movie--test--left'" ng-class-even="'movie--test--right'" class="col-sm-8 col-md-9">
-        <div ng-repeat="movie in rows |orderBy: date_released | filter: query" class="movie movie--test movie--test--dark">
+        <div ng-repeat="movie in rows |orderBy: 'date_released' | filter: query" class="movie movie--test movie--test--dark">
           <div class="movie__images">
             <a href ng-click="viewMovieDetail(movie.id)" class="movie-beta__link">
               <div ng-style="{'background': 'url(' + movie.poster +') no-repeat center center', 'background-size': 'cover', 'height': '212px'}"></div>
