--- a/angular/views/manage-movie.html
+++ b/angular/views/manage-movie.html
@@ -5,8 +5,8 @@
         <h2 class="page-heading">All Movies</h2>
         <a href ng-click="openMovieModal()" class="watchlist">Add a movie</a>
         <form id='search-form' class="search">
-          <input type="text" class="search__field" placeholder="Search" ng-model="query.name">
-          <button class="btn btn-md btn--danger search__button">search a movie</button>
+          <input type="text" class="search__field" placeholder="Search a movie" ng-model="query.name">
+          <!-- <button class="btn btn-md btn--danger search__button">search a movie</button> -->
         </form>
         <div class="rates-wrapper">
           <table>
