--- a/angular/views/movie-detail.html
+++ b/angular/views/movie-detail.html
@@ -8,7 +8,6 @@
           <div class="movie__images">
             <span class="movie__rating">{{movieDetail.rating}}</span>
             <div ng-style="{'background': 'url(' + movieDetail.poster +') no-repeat center center', 'background-size': 'cover', 'height': '377px'}"></div>
-            <!-- <img src="{{movieDetail.poster}}"> -->
           </div>
           <div class="movie__rate">Your vote:
             <span ng-click="addRating()" uib-rating ng-model="movieDetail.points" max="max" read-only="isReadonly" on-hover="hoveringOver(value)" on-leave="overStar = null" titles="['one','two','three']" aria-labelledby="default-rating"></span>
@@ -17,27 +16,11 @@
         </div>
         <div class="col-sm-6 col-md-8">
           <p class="movie__time">{{movieDetail.duration}}</p>
-          <!-- <p class="movie__option"><strong>Country: </strong><a href="#">New Zeland</a>, <a href="#">USA</a></p> -->
-          <!-- <p class="movie__option"><strong>Year: </strong><a href="#">2012</a></p> -->
           <p class="movie__option"><strong>Category: </strong>{{movieDetail.genre}}</p>
           <p class="movie__option"><strong>Release date: </strong>{{movieDetail.date_released | date}}</p>
           <p class="movie__option"><strong>Director: </strong><a href>{{movieDetail.director}}</a></p>
           <p class="movie__option"><strong>Actors: </strong>{{movieDetail.cast}}</p>
-          <!-- <p class="movie__option"><strong>Age restriction: </strong><a href="#">13</a></p> -->
-          <!-- <p class="movie__option"><strong>Box office: </strong><a href="#">$1 017 003 568</a></p> -->
-          <a href ng-click="srollToCmtSection()" class="comment-link">Comments: {{ movieDetail.reviews.length }}</a>
-          <!--  <div class="movie__btns">
-            <a href="#" class="btn btn-md btn--warning">book a ticket for this movie</a>
-            <a href="#" class="watchlist">Add to watchlist</a>
-          </div> -->
-          <!--  <div class="share">
-            <span class="share__marker">Share: </span>
-            <div class="addthis_toolbox addthis_default_style ">
-              <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-              <a class="addthis_button_tweet"></a>
-              <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
-            </div>
-          </div> -->
+          <a href ng-click="scrollToSection('#comment-section')" class="comment-link">Comments: {{ movieDetail.reviews.length }}</a>
         </div>
       </div>
       <div class="clearfix"></div>
@@ -55,7 +38,7 @@
           <fieldset ng-disabled="tempCom.id && waiting">
             <textarea class="comment-form__text" placeholder='What do you think about this movie?*' ng-model="myReview"></textarea>
             <label class="comment-form__info">* At least 10 characters</label>
-            <button ng-click="addComment()" class="btn btn-md btn--danger comment-form__btn">add comment</button>
+            <button ng-click="addComment()" class="btn btn-md btn--danger comment-form__btn" ng-disabled="myReview.length < 10">add comment</button>
           </fieldset>
         </form>
         <div class="comment-sets">
@@ -73,7 +56,6 @@
                 <button ng-click="cancelEdit()" class="btn btn-md btn--primary comment-form__btn">CANCEL</button>
               </fieldset>
             </form>
-            <!-- <a href='#' class="comment__like">Like</a> -->
             <div class="loader comment__options" ng-show="review.id === tempCom.id && waiting"></div>
             <span ng-if="review.user_id === user.id || user.role === 32" ng-hide="review.id === tempCom.id && waiting" uib-dropdown on-toggle="toggled(open)" class="comment__options">
               <a href class="glyphicon glyphicon-chevron-down" id="simple-dropdown" uib-dropdown-toggle></a>
